@@ -1,3 +1,9 @@
+2006-12-21  Marcus Brinkmann  <marcus@g10code.de>
+
+	* cert.c (ksba_cert_release): Release CERT->image.
+	* ber-decoder.c (release_decoder_state): Release D->image.buf on
+	error.
+
 2006-12-20  Marcus Brinkmann  <marcus@g10code.de>
 
 	* reader.c (ksba_reader_release): Release R->u.mem.buffer if type
